# green-potential-model

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  api.py  data_checker.py  docker-compose.yml  format_test.py  index.html  linter_test.py  main.py  pyproject.toml  s1_h3_generator.py  s2_restriction_processor.py  s3_analyzer.py
data/processed/final_results/: analysis_delft_districts_s1.geojson  analysis_delft_districts_s2.geojson  analysis_delft_districts_s3.geojson  analysis_delft_municipality_s1.geojson  analysis_delft_municipality_s2.geojson  analysis_delft_municipality_s3.geojson  analysis_delft_neighborhoods_s1.geojson  analysis_delft_neighborhoods_s2.geojson  analysis_delft_neighborhoods_s3.geojson  analysis_res_10_s1.geojson  analysis_res_10_s2.geojson  analysis_res_10_s3.geojson  analysis_res_8_s1.geojson  analysis_res_8_s2.geojson  analysis_res_8_s3.geojson  analysis_res_9_s1.geojson  analysis_res_9_s2.geojson  analysis_res_9_s3.geojson
data/raw/: test.geojson
data/stads_indelingen/: delft_wijken.geojson
frontend/: grids.html  index.html  restrictions.html  results.html
frontend/css/: style.css
frontend/js/: app.js  config.js  layerManager.js
green_potential_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_fullcheck.py
src/: api.py  config.py  dataloader.py  main.py  shared.py  tree_density.py  visualizer.py
src/data_processors/: aggregate_restrictions.py  building_processor.py  h3_processor.py  tree_processor.py
src/dataloaders/: municipality_trees.py
(+8 files in other folders)
