[project]
name = "green-potential-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "mypy>=1.18.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[project.scripts]
fullcheck = "scripts.run_fullcheck:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
