[project]
name = "green-potential-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "geoalchemy2>=0.18.1",
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "h3>=4.3.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "topojson>=1.10",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[project.scripts]
fullcheck = "scripts.run_fullcheck:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
